# LzwArchiver

./: README.md
ConsoleApp/src/: CMakeLists.txt  main.cpp
ConsoleApp/src/command/executor/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.hpp
ConsoleApp/src/command/parser/: CMakeLists.txt  CommandParser.cpp  CommandParser.hpp
ConsoleApp/src/command/utils/: ArrayUtils.cpp  ArrayUtils.hpp  CMakeLists.txt  CharArrUtils.cpp  CharArrUtils.hpp  Constants.hpp
ConsoleApp/src/compressor/byte/: ByteCompressor.cpp  ByteCompressor.hpp  CMakeLists.txt
ConsoleApp/src/compressor/directory/: CMakeLists.txt  DirectoryCompressor.cpp  DirectoryCompressor.hpp
ConsoleApp/src/compressor/file/: ArchiveHeader.hpp  CMakeLists.txt  FileCompressor.cpp  FileCompressor.hpp
ConsoleApp/src/file/: CMakeLists.txt  File.cpp  File.hpp
ConsoleApp/src/file/hasher/: CMakeLists.txt  FileHasher.cpp  FileHasher.hpp
ConsoleApp/src/path/: CMakeLists.txt  PathUtils.cpp  PathUtils.hpp
ConsoleApp/src/wordCode/: CMakeLists.txt  WordCode.hpp  WordCodeUtils.cpp  WordCodeUtils.hpp
ConsoleApp/src/wordCode/reader/: CMakeLists.txt  WordCodeReader.cpp  WordCodeReader.hpp
ConsoleApp/src/wordCode/writer/: CMakeLists.txt  WordCodeWriter.cpp  WordCodeWriter.hpp
InputFiles/: b.txt
OutputFiles/: c.txt  d.txt  e.txt
OutputFiles/Archived/: archive copy.lzw  archive.lzw  archive2.lzw  archiveTemp.lzw
OutputFiles/Unarchived/fold1/: a.txt  b.txt  c.txt
OutputFiles/Unarchived/fold1/fold/: d.txt  e.txt
OutputFiles/Unarchived/fold1/fold/foldInt/: f.txt
OutputFiles/Unarchived/fold2/: a.txt
OutputFiles/Unarchived/fold3/: g.txt
